--- a/public/css/style.css
+++ b/public/css/style.css
@@ -860,7 +860,7 @@ button {
     bottom: 0px;
     width: 485px;
     height: 600px;
-    background-image: url(../images/footer-bg.png);
+    /* background-image: url(../images/footer-bg.png); */
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -872,7 +872,7 @@ button {
     font-size: 16px;
     margin-left: 0px;
     border-top: 1px solid #686768;
-    margin-top: 50px;
+    margin-top: 5px;
     padding: 10px 0px;
 }
 .copyright_text a {
